--- a/html/notes.html
+++ b/html/notes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Notes App</title>
-  <link rel="stylesheet" href="noteboard.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <div class="container">
@@ -21,6 +21,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
