Notes.html och script.js changes

--- a/html/notes.html
+++ b/html/notes.html
@@ -14,7 +14,14 @@
     </div>
 
     <div id="notes-section">
+
       <h2>Dina Notes</h2>
+
+
+<label for="board-select">Board:</label>
+<select id="board-select"></select>
+
+
       <input type="text" id="new-note" placeholder="Ny note..." />
       <button onclick="createNote()">Skapa note</button>
       <ul id="notes-list"></ul>
