--- a/html/notes.html
+++ b/html/notes.html
@@ -9,25 +9,27 @@
 <body>
   <div class="container">
     <h1>Notes App</h1>
+
     <div>
-        <button onclick="logout()">Logga ut</button>
+      <button id="logoutBtn" type="button">Logga ut</button>
     </div>
 
     <div id="notes-section">
-
       <h2>Dina Notes</h2>
 
+      <label for="board-select">Board:</label>
+      <select id="board-select"></select>
 
-<label for="board-select">Board:</label>
-<select id="board-select"></select>
+      <input id="new-note" type="text" placeholder="Ny note..." />
 
+     
+      <button id="createNoteBtn" type="button" onclick="createNote()">Skapa note</button>
 
-      <input type="text" id="new-note" placeholder="Ny note..." />
-      <button onclick="createNote()">Skapa note</button>
       <ul id="notes-list"></ul>
     </div>
   </div>
 
+ 
   <script src="../script.js"></script>
 </body>
 </html>
